--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "next": "^13.4.1",
-    "prisma": "^4.13.0",
+    "prisma": "^4.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -32,7 +32,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.23",
-    "tailwindcss": "^3.3.2",
-    "supabase": "^1.57.4"
+    "supabase": "^1.57.4",
+    "tailwindcss": "^3.3.2"
   }
 }
