--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prisma migrate": "npx prisma migrate dev --name init"
   },
   "dependencies": {
-    "@prisma/client": "4.13.0",
+    "@prisma/client": "^4.14.1",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.21.0",
