--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "dayjs": "^1.11.7",
     "encoding": "^0.1.13",
     "eslint": "8.39.0",
-    "eslint-config-next": "13.3.4",
-    "next": "^13.4.1",
+    "eslint-config-next": "^13.4.4",
+    "next": "^13.4.4",
     "prisma": "^4.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
