--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prisma migrate": "npx prisma migrate dev --name init"
   },
   "dependencies": {
-    "@prisma/client": "^4.14.1",
+    "@prisma/client": "^4.15.0",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.21.0",
@@ -23,9 +23,10 @@
     "eslint": "8.39.0",
     "eslint-config-next": "^13.4.4",
     "next": "^13.4.4",
-    "prisma": "^4.14.0",
+    "prisma": "^4.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.8.0",
     "react-tailwindcss-datepicker": "^1.6.1",
