--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prisma migrate": "npx prisma migrate dev --name init"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.1.1",
     "@prisma/client": "^4.15.0",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
@@ -18,6 +19,7 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "daisyui": "^3.1.0",
+    "date-fns": "^2.30.0",
     "dayjs": "^1.11.7",
     "encoding": "^0.1.13",
     "eslint": "8.39.0",
