--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.15.0",
+    "@stripe/stripe-js": "^1.54.1",
     "@supabase/auth-helpers-nextjs": "^0.6.1",
     "@supabase/auth-helpers-react": "^0.3.1",
     "@supabase/supabase-js": "^2.21.0",
@@ -22,7 +23,7 @@
     "encoding": "^0.1.13",
     "eslint": "8.39.0",
     "eslint-config-next": "^13.4.4",
-    "next": "^13.4.4",
+    "next": "^13.4.7",
     "next-intl": "3.0.0-beta.3",
     "prisma": "^4.15.0",
     "react": "^18.2.0",
@@ -32,6 +33,7 @@
     "react-icons": "^4.8.0",
     "react-tailwindcss-datepicker": "^1.6.1",
     "react-time-picker": "^6.2.0",
+    "stripe": "^12.10.0",
     "typescript": "5.0.4",
     "zod": "^3.21.4"
   },
